--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="choropleth-map"></div>
     </div>
   </body>
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
   <script src="./scripts/d3.min.js"></script>
   <script src="./scripts/topojson.min.js"></script>
   <script src="./scripts/index.js"></script>
